<resources>
    <string name="app_name">网购潮</string>
    <string name="fragment_bandsale_sousuo">在这里搜索淘宝贝</string>
    <string name="fragment_bandsale_qiandao">签到赚金币</string>
    <string name="fragment_bandsale_special">今日特卖</string>
    <string name="fragment_bandsale_clothing">服装</string>
    <string name="fragment_bandsale_shoes">鞋包</string>
    <string name="fragment_bandsale_childclothing">童装</string>
    <string name="fragment_bandsale_household">居家</string>
    <string name="fragment_bandsale_account">个户</string>
    <string name="fragment_bandsale_cate">美食</string>
    <string name="fragment_bandsale_digital">数码</string>
</resources>
